--- a/launch/kinesis-to-firehose.yml
+++ b/launch/kinesis-to-firehose.yml
@@ -1,10 +1,10 @@
-run:
-  type: docker
-env: []
+env:
+- AWS_ACCESS_KEY_ID
+- AWS_SECRET_ACCESS_KEY
 resources:
-  cpu: 0.1
-  max_mem: 0.1
+  cpu: 1.0
+  max_mem: 0.5
 shepherds:
 - "nathan.leiby@clever.com"
 expose: []
-team: "TODO"
+team: "eng-infra"
