--- a/launch/kinesis-to-firehose.yml
+++ b/launch/kinesis-to-firehose.yml
@@ -1,6 +1,10 @@
 env:
 - AWS_ACCESS_KEY_ID
 - AWS_SECRET_ACCESS_KEY
+- KINESIS_AWS_REGION
+- KINESIS_STREAM_NAME
+- FIREHOSE_AWS_REGION
+- FIREHOSE_STREAM_NAME
 resources:
   cpu: 1.0
   max_mem: 0.5
