--- a/consumer.properties.template
+++ b/consumer.properties.template
@@ -9,7 +9,7 @@ streamName = <STREAM_NAME>
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = kinesis-to-firehose
+applicationName = <APPLICATION_NAME>
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
