launch: add KINESIS_APPLICATION_NAME to env

--- a/launch/kinesis-to-firehose.yml
+++ b/launch/kinesis-to-firehose.yml
@@ -3,6 +3,7 @@ env:
 - AWS_SECRET_ACCESS_KEY
 - KINESIS_AWS_REGION
 - KINESIS_STREAM_NAME
+- KINESIS_APPLICATION_NAME
 - FIREHOSE_AWS_REGION
 - FIREHOSE_STREAM_NAME
 resources:
