glide: update deps

--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,5 @@ import:
 - package: golang.org/x/time
   subpackages:
   - rate
+- package: github.com/jeromer/syslogparser
+- package: github.com/Clever/syslogparser
