--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ compile:
 test:
   override:
   - make test
+  - make bench | tee $CIRCLE_TEST_REPORTS/benchmarks.txt
 deployment:
   always:
     branch: /.*/
