--- a/glide.yaml
+++ b/glide.yaml
@@ -10,4 +10,6 @@ import:
   - rate
 - package: github.com/jeromer/syslogparser
 - package: github.com/Clever/syslogparser
-- package: github.com/satyrius/gonx
+- package: golang.org/x/net
+  subpackages:
+  - context
