correctly checkpoitn at shutdown

--- a/glide.yaml
+++ b/glide.yaml
@@ -13,3 +13,6 @@ import:
 - package: golang.org/x/net
   subpackages:
   - context
+- package: github.com/Clever/amazon-kinesis-client-go
+  subpackages:
+  - kcl
