--- a/launch/kinesis-to-firehose-log-search.yml
+++ b/launch/kinesis-to-firehose-log-search.yml
@@ -14,9 +14,9 @@ env:
 - RENAME_ES_RESERVED_FIELDS
 - MINIMUM_TIMESTAMP
 resources:
-  cpu: .5
+  cpu: 0.0  # no CPU to improve resource usage (https://clever.atlassian.net/browse/INFRA-2120)
   max_mem: 1.8
 shepherds:
-- "rafael.garcia@clever.com"
+- rafael.garcia@clever.com
 expose: []
-team: "eng-infra"
+team: eng-infra
