--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,10 @@
 package: github.com/Clever/kinesis-to-firehose
 import:
 - package: github.com/aws/aws-sdk-go
+  subpackages:
+  - aws/request
+  - aws
+  - service/firehose
 - package: golang.org/x/time
   subpackages:
   - rate
