splitter: ingest+split logs from CWLogs subscription (#21)
* splitter: ingest+split logs from CWLogs subscription

* splitter: docs and linting

* writer: add MockFirehoseAPI for tests

generated via

```
mockgen github.com/aws/aws-sdk-go/service/firehose/firehoseiface FirehoseAPI > mock_firehose_api_test.go
```

* splitter: refactor

* writer: process records from CWLogs subscription

also adds tests

* splitter: make Split public, for use in decode tests

* linting fixes

- move mocks
- ignore mocks in Makefile's PKGS, so we don't fail lint on auto-generated files
- lint fix for Splitter

* glide: update deps -- add gomock

* glide: update aws-sdk-go version

* splitter: allow filtering logs by env

Currently, we don't have the capability to either:

1. control the log group that AWS Batch writes to (everything goes to a single log group, dev or prod)
2. filter by log stream name within a CWLogs subscription

We've asked AWS to fix (1), and in the meantime, are doing a solution
similar to (2) but in the consumer's code.

* splitter: (nit) cleanup extra comment

* splitter/writer: pr feedback

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,10 @@
 package: github.com/Clever/kinesis-to-firehose
 import:
 - package: github.com/aws/aws-sdk-go
+  subpackages:
+  - aws/request
+  - aws
+  - service/firehose
 - package: golang.org/x/time
   subpackages:
   - rate
@@ -11,3 +15,6 @@ import:
 - package: github.com/Clever/amazon-kinesis-client-go
   subpackages:
   - kcl
+- package: github.com/golang/mock
+  subpackages:
+  - gomock
