--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,18 @@ jobs:
           destination: benchmarks
       - store_test_results:
           path: /tmp/test-results
-      - run: $HOME/ci-scripts/circleci/docker-publish $DOCKER_USER $DOCKER_PASS "$DOCKER_EMAIL" $DOCKER_ORG
+      - deploy:
+          name: Publish Docker Image
+          command: $HOME/ci-scripts/circleci/docker-publish $DOCKER_USER $DOCKER_PASS "$DOCKER_EMAIL" $DOCKER_ORG
+      - deploy:
+          name: Publish Catapult Application
+          command: |
+            $HOME/ci-scripts/circleci/catapult-publish $CATAPULT_URL $CATAPULT_USER $CATAPULT_PASS kinesis-to-firehose-log-archive
+            $HOME/ci-scripts/circleci/catapult-publish $CATAPULT_URL $CATAPULT_USER $CATAPULT_PASS kinesis-to-firehose-log-search
+      - deploy:
+          name: "Deploy (master branch only)"
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              $HOME/ci-scripts/circleci/dapple-deploy $DAPPLE_URL $DAPPLE_USER $DAPPLE_PASS kinesis-to-firehose-log-archive
+              $HOME/ci-scripts/circleci/dapple-deploy $DAPPLE_URL $DAPPLE_USER $DAPPLE_PASS kinesis-to-firehose-log-search
+            fi
