--- a/glide.yaml
+++ b/glide.yaml
@@ -1,20 +1,27 @@
 package: github.com/Clever/kinesis-to-firehose
 import:
-- package: github.com/aws/aws-sdk-go
-  subpackages:
-  - aws/request
-  - aws
-  - service/firehose
-- package: golang.org/x/time
-  subpackages:
-  - rate
-- package: github.com/Clever/syslogparser
-- package: golang.org/x/net
-  subpackages:
-  - context
 - package: github.com/Clever/amazon-kinesis-client-go
   subpackages:
-  - kcl
+  - batchconsumer
+  - decode
+- package: github.com/aws/aws-sdk-go
+  version: ^1.10.18
+  subpackages:
+  - aws
+  - aws/request
+  - aws/session
+  - service/firehose
+  - service/firehose/firehoseiface
 - package: github.com/golang/mock
+  version: ^1.0.0
   subpackages:
   - gomock
+- package: gopkg.in/Clever/kayvee-go.v6
+  version: ^6.6.0
+  subpackages:
+  - logger
+testImport:
+- package: github.com/stretchr/testify
+  version: ^1.1.4
+  subpackages:
+  - assert
