--- a/launch/kinesis-to-firehose-log-search.yml
+++ b/launch/kinesis-to-firehose-log-search.yml
@@ -8,7 +8,7 @@ env:
 - FIREHOSE_AWS_REGION
 - FIREHOSE_STREAM_NAME
 - LOG_FILE
-- RATE_LIMIT
+- READ_RATE_LIMIT
 - DEPLOY_ENV
 - STRINGIFY_NESTED
 - RENAME_ES_RESERVED_FIELDS
