give k-to-f cpu

--- a/launch/kinesis-to-firehose-log-archive.yml
+++ b/launch/kinesis-to-firehose-log-archive.yml
@@ -12,7 +12,7 @@ env:
 - DEPLOY_ENV
 - IS_ELASTICSEARCH_CONSUMER
 resources:
-  cpu: 0.0  # no CPU to improve resource usage (https://clever.atlassian.net/browse/INFRA-2120)
+  cpu: 1.0
   soft_mem_limit: 0.9
   max_mem: 1.8
 shepherds:
