write to the log archive via firehose endpoint
same as https://github.com/Clever/kinesis-analytics-consumer/pull/81

--- a/launch/kinesis-to-firehose-log-archive.yml
+++ b/launch/kinesis-to-firehose-log-archive.yml
@@ -5,6 +5,7 @@ env:
 - KINESIS_INITIAL_POSITION
 - FIREHOSE_AWS_REGION
 - FIREHOSE_STREAM_NAME
+- FIREHOSE_AWS_ENDPOINT
 - LOG_FILE
 - READ_RATE_LIMIT
 - DEPLOY_ENV
